Source/WebCore/css/CSSParser.cpp
@@ -3353,6 +3353,7 @@ bool CSSParser::parseScrollSnapPositions(RefPtr<CSSValue>& cssValueX, RefPtr<CSS
 bool CSSParser::parseScrollSnapDestination(CSSPropertyID propId, bool important)
 {
     RefPtr<CSSValueList> position = CSSValueList::createSpaceSeparated();
+    ASSERT(m_valueList->size() == 2);
     if (m_valueList->size() != 2)
         return false;
 
