Source/WebCore/page/scrolling/AxisScrollSnapOffsets.cpp
@@ -29,6 +29,7 @@
 #include "ElementChildIterator.h"
 #include "HTMLCollection.h"
 #include "HTMLElement.h"
+#include "Length.h"
 #include "RenderBox.h"
 #include "ScrollableArea.h"
 #include "StyleScrollSnapPoints.h"
@@ -68,18 +69,25 @@ static void appendChildSnapOffsets(HTMLElement& parent, bool shouldAddHorizontal
     }
 }
 
+static LayoutUnit destinationOffsetForViewSize(ScrollEventAxis axis, const LengthSize& destination, LayoutUnit viewSize)
+{
+    const Length& dimension = (axis == ScrollEventAxis::Horizontal) ? destination.width() : destination.height();
+    return valueForLength(dimension, viewSize);
+}
+    
 static void updateFromStyle(Vector<LayoutUnit>& snapOffsets, const RenderStyle& style, ScrollEventAxis axis, LayoutUnit viewSize, LayoutUnit scrollSize, Vector<LayoutUnit>& snapOffsetSubsequence)
 {
     std::sort(snapOffsetSubsequence.begin(), snapOffsetSubsequence.end());
     if (snapOffsetSubsequence.isEmpty())
         snapOffsetSubsequence.append(0);
 
-    bool isHorizontalAxis = axis == ScrollEventAxis::Horizontal;
-    auto* points = isHorizontalAxis ? style.scrollSnapPointsX() : style.scrollSnapPointsY();
-    auto& destination = style.scrollSnapDestination();
+    // Always put a snap point on the zero offset.
+    snapOffsets.append(0);
+
+    auto* points = (axis == ScrollEventAxis::Horizontal) ? style.scrollSnapPointsX() : style.scrollSnapPointsY();
     bool hasRepeat = points ? points->hasRepeat : false;
     LayoutUnit repeatOffset = points ? valueForLength(points->repeatOffset, viewSize) : LayoutUnit();
-    LayoutUnit destinationOffset = valueForLength(isHorizontalAxis ? destination.width() : destination.height(), viewSize);
+    LayoutUnit destinationOffset = destinationOffsetForViewSize(axis, style.scrollSnapDestination(), viewSize);
     LayoutUnit curSnapPositionShift = 0;
     LayoutUnit maxScrollOffset = scrollSize - viewSize;
     LayoutUnit lastSnapPosition = curSnapPositionShift;
@@ -92,14 +100,14 @@ static void updateFromStyle(Vector<LayoutUnit>& snapOffsets, const RenderStyle& 
             if (potentialSnapPosition >= maxScrollOffset)
                 break;
 
-            snapOffsets.append(potentialSnapPosition);
+            // Don't add another zero offset value.
+            if (potentialSnapPosition)
+                snapOffsets.append(potentialSnapPosition);
+
             lastSnapPosition = potentialSnapPosition + destinationOffset;
         }
         curSnapPositionShift = lastSnapPosition + repeatOffset;
     } while (hasRepeat && curSnapPositionShift < maxScrollOffset);
-
-    if (snapOffsets.isEmpty())
-        snapOffsets.append(0);
 
     // Always put a snap point on the maximum scroll offset.
     // Not a part of the spec, but necessary to prevent unreachable content when snapping.
@@ -107,6 +115,17 @@ static void updateFromStyle(Vector<LayoutUnit>& snapOffsets, const RenderStyle& 
         snapOffsets.append(maxScrollOffset);
 }
 
+static bool styleUsesElements(ScrollEventAxis axis, const RenderStyle& style)
+{
+    const ScrollSnapPoints* scrollSnapPoints = (axis == ScrollEventAxis::Horizontal) ? style.scrollSnapPointsX() : style.scrollSnapPointsY();
+    if (scrollSnapPoints)
+        return scrollSnapPoints->usesElements;
+
+    const Length& destination = (axis == ScrollEventAxis::Horizontal) ? style.scrollSnapDestination().width() : style.scrollSnapDestination().height();
+
+    return !destination.isUndefined();
+}
+    
 void updateSnapOffsetsForScrollableArea(ScrollableArea& scrollableArea, HTMLElement& scrollingElement, const RenderBox& scrollingElementBox, const RenderStyle& scrollingElementStyle)
 {
     if (scrollingElementStyle.scrollSnapType() == ScrollSnapType::None) {
@@ -133,8 +152,8 @@ void updateSnapOffsetsForScrollableArea(ScrollableArea& scrollableArea, HTMLElem
     Vector<LayoutUnit> horizontalSnapOffsetSubsequence;
     Vector<LayoutUnit> verticalSnapOffsetSubsequence;
 
-    bool scrollSnapPointsXUsesElements = scrollingElementStyle.scrollSnapPointsX() ? scrollingElementStyle.scrollSnapPointsX()->usesElements : false;
-    bool scrollSnapPointsYUsesElements = scrollingElementStyle.scrollSnapPointsY() ? scrollingElementStyle.scrollSnapPointsY()->usesElements : false;
+    bool scrollSnapPointsXUsesElements = styleUsesElements(ScrollEventAxis::Horizontal, scrollingElementStyle);
+    bool scrollSnapPointsYUsesElements = styleUsesElements(ScrollEventAxis::Vertical , scrollingElementStyle);
 
     if (scrollSnapPointsXUsesElements || scrollSnapPointsYUsesElements) {
         bool shouldAddHorizontalChildOffsets = scrollSnapPointsXUsesElements && canComputeHorizontalOffsets;
